--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.17",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "less": "^2.7.2",
+    "less-loader": "^5.0.0",
+    "vue": "^2.6.10",
+    "moment": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-plugin-eslint": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
