--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.17",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "less": "^2.7.2",
     "less-loader": "^5.0.0",
     "moment": "latest",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
