--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "ant-design-vue": "^1.3.17",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "jwt-decode": "^2.2.0",
     "less": "^2.7.2",
     "less-loader": "^5.0.0",
-    "moment": "latest",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
