--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^2.2.0",
     "less": "^2.7.2",
     "less-loader": "^5.0.0",
+    "mavon-editor": "^2.7.6",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
