--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aliyunoss-webpack-plugin": "^0.2.1",
     "ant-design-vue": "^1.4.4",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
@@ -19,7 +20,8 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "webpack-aliyun-oss": "^0.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
